feat: Update DataSeeder with new product naming templates and category-specific options for various brands